# igorrust.xyz-source

./: .gitignore  CNAME  Cargo.toml  Dioxus.toml  README.md  build.sh  index.html
.github/workflows/: deploy.yml
assets/: igorrust-4b9f454785342790.js  igorrust-4b9f454785342790.js.br  igorrust_bg-9a6abbcef343862a.wasm  igorrust_bg-9a6abbcef343862a.wasm.br  main__avatar.png.br  tailwind-cdbde4aed61079d4.css  tailwind-cdbde4aed61079d4.css.br
public/: tailwind.css
src/: components.rs  config.rs  engine.rs  main.rs  math.rs  routes.rs
